--- a/opt1/app/src/main/res/layout/recycler_view_row_recruit.xml
+++ b/opt1/app/src/main/res/layout/recycler_view_row_recruit.xml
@@ -21,24 +21,24 @@
 
         <TextView
             android:id="@+id/tvcategory"
-            android:layout_width="wrap_content"
+            android:layout_width="59dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="축구"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"/>
+            android:text="축구" />
 
         <LinearLayout
-            android:layout_width="243dp"
+            android:layout_width="258dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvtime"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical"
                 android:textSize="20sp"
@@ -46,21 +46,43 @@
 
             <TextView
                 android:id="@+id/tvarea"
-                android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:text="구미시 금오공과 대학교 대운동장" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvrecruit_num"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="125dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text="7/8"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvrecruit_num"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="7/8" />
+
+            <TextView
+                android:id="@+id/mine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right" />
+
+            <TextView
+                android:id="@+id/rec_no"
+                android:layout_width="1dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:text="TextView" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
