--- a/openair/app/src/main/res/menu/activity_main_drawer.xml
+++ b/openair/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,9 +15,9 @@
             android:icon="@android:drawable/ic_menu_myplaces"
             android:title="로그인" />
         <item
-            android:id="@+id/nav_logout"
-            android:icon="@android:drawable/ic_menu_delete"
-            android:title="로그아웃" />
+            android:id="@+id/nav_mypage"
+            android:icon="@android:drawable/ic_menu_myplaces"
+            android:title="마이페이지" />
     </group>
 
     <item android:title="프로그램 정보">
