--- a/openair/app/src/main/res/layout/activity_date_select.xml
+++ b/openair/app/src/main/res/layout/activity_date_select.xml
@@ -45,7 +45,7 @@
         android:background="#000" />
 
     <CalendarView
-        android:id="@+id/calendarView2"
+        android:id="@+id/DateCalendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
