--- a/openair/app/src/main/res/layout/fragment_menu2.xml
+++ b/openair/app/src/main/res/layout/fragment_menu2.xml
@@ -17,50 +17,45 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#EDF3FA"
         android:orientation="horizontal">
-
 
         <EditText
             android:id="@+id/editText"
-            android:layout_width="397dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="9"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
             android:ems="10"
             android:gravity="center"
             android:hint="업체 정보 검색"
             android:inputType="textPersonName" />
 
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_search_category_default" />
-
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000" />
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:id="@+id/swipe_menu2">
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent">
 
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/ActivityRecycler"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/ActivityRecycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 </LinearLayout>
