--- a/openair/app/src/main/res/layout/fragment_menu1.xml
+++ b/openair/app/src/main/res/layout/fragment_menu1.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -50,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="53dp"
                 android:gravity="center"
-                android:text="내 주변 관심 활동지"
+                android:text="일별 예보"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <View
@@ -59,115 +59,12 @@
                 android:layout_height="1dp"
                 android:background="#000" />
 
-            <TextView
-                android:id="@+id/textView4"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/WeatherRecycler"
                 android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/view3"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/view5"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/view6"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/view7"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/view8"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/view9"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/view12"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/view11"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
-
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/view10"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
+                android:layout_height="match_parent"/>
 
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
