--- a/openair/app/src/main/res/layout/recycler_view_row_activity.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_activity.xml
@@ -4,11 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="2dp"
-    android:layout_marginLeft="2dp"
-    android:layout_marginEnd="2dp"
-    android:layout_marginRight="2dp"
-    android:layout_marginBottom="1dp"
+    android:layout_margin="4dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp">
 
@@ -38,7 +34,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#000" />
+            android:background="#DDD" />
 
 
         <LinearLayout
@@ -66,7 +62,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#000" />
+            android:background="#DDD" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,8 +71,9 @@
 
             <TextView
                 android:id="@+id/ActivityText"
-                android:layout_width="299dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_weight="8.5"
                 android:gravity="center"
                 android:text="넓고 쾌적한 풋살장" />
 
@@ -90,9 +87,9 @@
 
             <TextView
                 android:id="@+id/ActivityStar"
-                android:layout_width="71dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="0.5"
                 android:gravity="center|left"
                 android:text="4.5" />
         </LinearLayout>
@@ -100,7 +97,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#000" />
+            android:background="#DDD" />
 
         <TextView
             android:id="@+id/ActivityPrice"
@@ -111,9 +108,5 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="#f00" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
