--- a/openair/app/src/main/res/menu/activity_main_drawer.xml
+++ b/openair/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group
+    <item android:title="">
         android:id="@+id/menu_member"
         android:checkableBehavior="single">
         <item
@@ -14,7 +14,11 @@
             android:id="@+id/nav_login"
             android:icon="@android:drawable/ic_menu_myplaces"
             android:title="로그인" />
-    </group>
+        <item
+            android:id="@+id/nav_mypage"
+            android:icon="@android:drawable/ic_menu_myplaces"
+            android:title="마이페이지" />
+    </item>
 
     <item android:title="프로그램 정보">
         <menu>
