--- a/openair/app/src/main/res/layout/custom_dialog_combo.xml
+++ b/openair/app/src/main/res/layout/custom_dialog_combo.xml
@@ -15,12 +15,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="인원모집 글쓰기"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+        android:gravity="center"
+        android:textColor="#000"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/totalCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="total"
         android:inputType="textPersonName" />
@@ -29,6 +33,7 @@
         android:id="@+id/recruitCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="recruit"
         android:inputType="textPersonName" />
@@ -37,18 +42,21 @@
         android:id="@+id/spiner1Combo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:entries="@array/time" />
 
     <Spinner
         android:id="@+id/spiner2Combo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:entries="@array/time" />
 
     <EditText
         android:id="@+id/areaCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="area"
         android:inputType="textPersonName" />
@@ -62,15 +70,23 @@
             android:id="@+id/cancleButtonCombo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:text="취소" />
+            android:text="취소"
+            android:background="#EDF3FA"
+            android:textColor="@color/ic_launcher_background" />
 
         <Button
             android:id="@+id/okButtonCombo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
-            android:text="입력완료" />
+            android:text="입력완료"
+            android:background="#EDF3FA"
+            android:textColor="@color/ic_launcher_background" />
     </LinearLayout>
 
 </LinearLayout>
