--- a/openair/app/src/main/res/layout/activity_review.xml
+++ b/openair/app/src/main/res/layout/activity_review.xml
@@ -30,39 +30,35 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000" />
-
-
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:gravity="center"
-        android:text="Review"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
-
-    <View
-        android:id="@+id/view17"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000" />
-
-    <TextView
-        android:id="@+id/ratingsum"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="평점 4.45 / 5"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+        android:orientation="horizontal"
+        android:background="#EDF3FA"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp">
 
-    <View
-        android:id="@+id/view21"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000" />
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="리뷰"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/ratingsum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="15dp"
+            android:gravity="left"
+            android:text="평점 (non / 5)"
+            android:textSize="15dp"
+            android:textStyle="bold"/>
+    </LinearLayout>
 
     <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -72,7 +68,7 @@
         android:orientation="vertical">
 
 
-        <ScrollView
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -86,16 +82,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#000" />
-
-
-
 
             </LinearLayout>
-        </ScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabReview"
