--- a/openair/app/src/main/res/layout/fragment_menu1.xml
+++ b/openair/app/src/main/res/layout/fragment_menu1.xml
@@ -1,70 +1,147 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:id="@+id/swipe">
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:gravity="center"
-                android:text="경북 구미시 날씨"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
-            <View
-                android:id="@+id/view2"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
+                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorWhite"
+                    tools:context=".MainActivity">
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:gravity="center"
-                android:text="open air 이벤트 정보"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                    <LinearLayout
+                        android:id="@+id/sbtnlayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal">
+                        <Button
+                            android:id="@+id/sbtn"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_toLeftOf="@+id/region_text"
+                            android:background="@drawable/outline_place_black_18dp" />
+                        <TextView
+                            android:id="@+id/location"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginTop="5dp"
+                            android:gravity="center"
+                            android:text="위치 정보"
+                            android:textSize="16sp"
+                            android:fontFamily="@font/ygotjalnanfont"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="match_parent"
-                android:layout_height="224dp"
-                app:srcCompat="@drawable/nain_visual_01" />
+                    </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
+                </RelativeLayout>
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:gravity="center"
-                android:text="일별 예보"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-            <View
-                android:id="@+id/view4"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#000" />
+                <LinearLayout
+                    android:id="@+id/weather_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:orientation="horizontal" >
+                    <ImageView
+                        android:id="@+id/w_icon"
+                        android:layout_width="110dp"
+                        android:layout_height="match_parent"
+                        />
+                    <TextView
+                        android:id="@+id/weather1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="날씨 정보를 확인하고 있습니다..."
+                        android:textSize="12sp"
+                        android:gravity="center_vertical"
+                        android:lineSpacingMultiplier="2.5"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/ygotjalnanfont"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                    <TextView
+                        android:id="@+id/weather2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text=""
+                        android:textSize="12sp"
+                        android:gravity="center_vertical"
+                        android:lineSpacingMultiplier="2.5"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/ygotjalnanfont"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/WeatherRecycler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="224dp"
+                    app:srcCompat="@drawable/nain_visual_01" />
 
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="실시간 미세먼지 정보"
+                    android:padding="10dp"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/ygotjalnanfont"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:gravity="center"/>
 
+                <android.support.v4.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none" >
+
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" >
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/tRecycler"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+
+                    </LinearLayout>
+                </android.support.v4.widget.NestedScrollView>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="미세먼지 예보"
+                    android:padding="10dp"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/ygotjalnanfont"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:gravity="center"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/WeatherRecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
