--- a/openair/app/src/main/res/layout/fragment_menu2.xml
+++ b/openair/app/src/main/res/layout/fragment_menu2.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <Button
         android:id="@+id/ActivityCategoryButton"
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#EDF3FA"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/editText"
@@ -32,14 +33,10 @@
 
     </LinearLayout>
 
-
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/swipe_menu2">
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -54,7 +51,6 @@
 
 
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
