--- a/openair/app/src/main/res/layout/recycler_view_row_activity.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_activity.xml
@@ -19,17 +19,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:background="@android:drawable/alert_light_frame"
-            android:scaleType="fitXY"
-            android:padding="16dp"/>
-
-        <!--
-        <ImageView
-            android:id="@+id/AcitvityImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/ball1" />
-            -->
+            android:scaleType="fitXY"/>
 
         <View
             android:layout_width="match_parent"
@@ -44,19 +34,24 @@
 
             <TextView
                 android:id="@+id/ActivityCategory"
-                android:layout_width="121dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
                 android:gravity="center"
-                android:text="카테고리" />
+                android:text="카테고리"
+                android:background="#EDF3FA" />
 
             <TextView
                 android:id="@+id/ActivityName"
-                android:layout_width="311dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_weight="9"
                 android:gravity="center"
                 android:text="풋살장a"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+                android:textSize="20dp"
+                android:textStyle="bold"/>
         </LinearLayout>
 
         <View
@@ -104,8 +99,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="30,000원"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textSize="20dp"
+            android:textStyle="bold"
             android:textColor="#f00" />
 
     </LinearLayout>
