--- a/openair/app/src/main/res/layout/recycler_view_row_review.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_review.xml
@@ -1,56 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="5dp"
     app:cardCornerRadius="5dp"
-    android:layout_marginBottom="1dp"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
-    android:layout_marginStart="2dp"
-    android:layout_marginEnd="2dp"
-    >
+    android:layout_margin="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_gravity="center">
 
             <TextView
                 android:id="@+id/ReviewNic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:textSize="15dp"
                 android:text="닉네임" />
 
 
             <RatingBar
                 android:id="@+id/ReviewRatingBar"
-                android:layout_width="wrap_content"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                android:paddingLeft="5dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:isIndicator="true"
+                android:max="5"
                 android:numStars="5"
                 android:rating="3"
-                android:stepSize="1"
-                android:max="5"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"/>
+                android:stepSize="1" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/ReviewSen"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:text="시설이 깔끔하고 서비스가 좋습니다. 완전 강추!" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
