--- a/openair/app/src/main/res/layout/recycler_view_row_weather.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_weather.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp">
+    android:layout_margin="3dp"
+    app:cardBackgroundColor="@color/colorCard"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,14 +52,14 @@
                     android:id="@+id/WeatherImage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     android:adjustViewBounds="true"
                     android:padding="16dp"
                     android:scaleType="fitXY" />
 
                 <TextView
                     android:id="@+id/PM10dust"
-                    android:layout_width="wrap_content"
+                    android:layout_width="22dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -88,14 +89,14 @@
                     android:id="@+id/WeatherImage2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     android:adjustViewBounds="true"
                     android:padding="16dp"
                     android:scaleType="fitXY" />
 
                 <TextView
                     android:id="@+id/PM25dust"
-                    android:layout_width="wrap_content"
+                    android:layout_width="22dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
