--- a/openair/app/src/main/res/layout/recycler_view_row_write_recruit.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_write_recruit.xml
@@ -21,6 +21,12 @@
 
 
         <TextView
+            android:id="@+id/rec_no"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:text="TextView" />
+
+        <TextView
             android:id="@+id/category"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
