--- a/openair/app/src/main/res/layout/activity_signup.xml
+++ b/openair/app/src/main/res/layout/activity_signup.xml
@@ -97,6 +97,25 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp">
+
+                <EditText
+                    android:id="@+id/phoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="전화번호"
+                    android:imeActionId="6"
+                    android:imeActionLabel="@string/action_sign_in_short"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="phone"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+            </android.support.design.widget.TextInputLayout>
+
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
@@ -106,6 +125,8 @@
                 android:text="@string/action_sign_up"
                 android:textStyle="bold"
                 android:background="@color/ic_launcher_background"/>
+
+
 
         </LinearLayout>
     </ScrollView>
