--- a/openair/app/src/main/res/layout/nav_header_main.xml
+++ b/openair/app/src/main/res/layout/nav_header_main.xml
@@ -11,11 +11,11 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="385dp"
+        android:layout_height="132dp"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="30dp"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/newlogo" />
 
     <LinearLayout
         android:layout_width="match_parent"
